force-app/main/default/objects/SAJ_MDC_Config__c/SAJ_MDC_Config__c.object-meta.xml
<CustomObject>
    <label>MDC Config</label>
    <nameField>
        <displayFormat>MDC-{00000}</displayFormat>
        <label>MDC Config Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MDC Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>