force-app/main/default/objects/SAJ_MDC_Config__c/fields/SAJ_App_Client_Id__c.field-meta.xml
<CustomField>
    <fullName>SAJ_App_Client_Id__c</fullName>
    <label>App Client Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>