force-app/main/default/objects/SAJ_MDC_Config__c/fields/SAJ_MDC_Master_Org__c.field-meta.xml
<CustomField>
    <fullName>SAJ_MDC_Master_Org__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MDC Master Org</label>
    <referenceTo>SAJ_MDC_Config__c</referenceTo>
    <relationshipLabel>MDC Configs</relationshipLabel>
    <relationshipName>MDC_Configs</relationshipName>
    <type>Lookup</type>
</CustomField>