force-app/main/default/objects/SAJ_MDC_Config__c/fields/SAJ_Object_Type__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Object_Type__c</fullName>
    <label>Object Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>