force-app/main/default/objects/SAJ_MDC_Config__c/fields/SAJ_Org_Name__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Org_Name__c</fullName>
    <label>Org Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>