force-app/main/default/objects/SAJ_MDC_Config__c/fields/SAJ_Org_Type__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Org_Type__c</fullName>
    <label>Org Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SAJ_Org_Type</valueSetName>
    </valueSet>
</CustomField>