force-app/main/default/objects/SAJ_MDC_Config__c/fields/SAJ_Password__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Password__c</fullName>
    <label>Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>