force-app/main/default/objects/SAJ_MDC_Config__c/fields/SAJ_Username__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Username__c</fullName>
    <label>Username</label>
    <length>100</length>
    <type>Text</type>
</CustomField>