force-app/main/default/objects/SAJ_MDC_Config__c/recordTypes/Org.recordType-meta.xml
<RecordType>
    <fullName>Org</fullName>
    <active>true</active>
    <label>Org</label>
</RecordType>