force-app/main/default/objects/SAJ_MDC_Config__c/listViews/All_Org.listView-meta.xml
<ListView>
    <fullName>All_Org</fullName>
    <columns>NAME</columns>
    <columns>SAJ_Active__c</columns>
    <columns>SAJ_Object_Name__c</columns>
    <columns>SAJ_Org_Name__c</columns>
    <columns>SAJ_Org_Type__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>SAJ_Username__c</columns>
    <columns>SAJ_Status__c</columns>
    <columns>SAJ_App_Client_Id__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>SAJ_MDC_Config__c.Org</value>
    </filters>
    <label>All Org</label>
    <language>en_US</language>
</ListView>