force-app/main/default/objects/SAJ_MDC_Config__c/listViews/Org.listView-meta.xml
<ListView>
    <fullName>Org</fullName>
    <columns>NAME</columns>
    <columns>SAJ_Org_Name__c</columns>
    <columns>SAJ_Password__c</columns>
    <columns>SAJ_Token__c</columns>
    <columns>SAJ_Username__c</columns>
    <columns>SAJ_App_Client_Secret__c</columns>
    <columns>SAJ_App_Client_Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>SAJ_MDC_Config__c.Org</value>
    </filters>
    <label>Org</label>
</ListView>